# parcomp

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  Sample Sort.docx  mc.tcl  mpi_hosts_8x  prefix_tst.sh  run_prefix_tests.pl  run_ssort_tests.pl  ssort.xlsx
include/: mpi.hxx  prefix.hxx  ssort.hxx
src/: mpi.cxx  prefix.cxx  ssort.cxx
test/: .prefix.cxx.swp  prefix.cxx  ssort.cxx  tests0.py
